crates/jarl/tests/integration/snapshots/integration__assignment__assignment_from_toml_deprecated-2.snap
---
source: crates/jarl/tests/integration/assignment.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--select\").arg(\"assignment\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
warning: assignment
 --> test.R:3:1
  |
3 | y <- 2
  | ^^^^ Use `=` for assignment.

warning: assignment
 --> test.R:4:3
  |
4 | 3 -> z
  |   ^^^^ Use `=` for assignment.

Found 2 errors.
2 fixable with the `--fix` option.

----- stderr -----
Warning: `assignment = "..."` in `[lint]` is deprecated. Use `[lint.assignment]` with `operator = "..."` instead.

----- args -----
check . --select assignment
