crates/jarl/tests/integration/snapshots/integration__assignment__assignment_wrong_value_from_cli-2.snap
---
source: crates/jarl/tests/integration/assignment.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--select\").arg(\"assignment\").arg(\"--assignment\").arg(\"1\").run().normalize_os_executable_name()"
---

success: false
exit_code: 255
----- stdout -----

----- stderr -----
jarl failed
  Cause: Invalid value in `--assignment`: 1

----- args -----
check . --select assignment --assignment 1
